--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grotalks - Guidance Made Easy</title>
-    <meta name="description" content="College alumni mentorship marketplace with per-minute billing. Connect with experienced professionals for career guidance, interview prep, and more.">
+    <meta name="description" content="College alumni alumnihip marketplace with per-minute billing. Connect with experienced professionals for career guidance, interview prep, and more.">
     <meta name="author" content="Grotalks" />
-    <meta name="keywords" content="mentorship, college alumni, career guidance, interview preparation, per-minute billing">
+    <meta name="keywords" content="alumnihip, college alumni, career guidance, interview preparation, per-minute billing">
 
     
     
@@ -22,8 +22,8 @@
   
   <meta property="og:title" content="Grotalks - Guidance Made Easy">
   <meta name="twitter:title" content="Grotalks - Guidance Made Easy">
-  <meta property="og:description" content="College alumni mentorship marketplace with per-minute billing. Connect with experienced professionals for career guidance, interview prep, and more.">
-  <meta name="twitter:description" content="College alumni mentorship marketplace with per-minute billing. Connect with experienced professionals for career guidance, interview prep, and more.">
+  <meta property="og:description" content="College alumni alumnihip marketplace with per-minute billing. Connect with experienced professionals for career guidance, interview prep, and more.">
+  <meta name="twitter:description" content="College alumni alumnihip marketplace with per-minute billing. Connect with experienced professionals for career guidance, interview prep, and more.">
   <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/1xPTQimcDcgUGYwgX6JJIf9HAov2/uploads/1762085779543-Light Mode - Logo.png">
 </head>
 
